make variables private